<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_connect">

        <EditTextPreference
            android:defaultValue="192.168.1.10"
            android:key="setting_layout_connect_ip"
            android:title="@string/setting_connect_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="3306"
            android:key="setting_layout_connect_port"
            android:title="@string/setting_connect_port" />

        <EditTextPreference
            android:defaultValue="mysql"
            android:key="setting_layout_connect_database"
            android:title="@string/setting_connect_database" />

        <EditTextPreference
            android:defaultValue="root"
            android:key="setting_layout_connect_user"
            android:title="@string/setting_connect_user" />

        <EditTextPreference
            android:defaultValue=""
            android:key="setting_layout_connect_password"
            android:title="@string/setting_connect_password" />
    </PreferenceCategory>
</PreferenceScreen>
